transition and content edits

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="header-left d-flex align-items-center">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="newlogoo.png" alt="Creative Agency" width='60' height='60'>
+                            <img src="newest.png" alt="Creative Agency" width='60' height='60'>
                         </a>
                     </div>
                     <nav class="mainmenunav d-lg-block ml--50">
@@ -49,9 +49,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link smoth-animation" href="#portfolio">Portfolio</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link smoth-animation" href="#blog">Blog</a>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
                                     <a class="nav-link smoth-animation" href="#contact">Contact</a>
                                 </li>
@@ -230,7 +230,7 @@
                         <div class="col-lg-12">
                             <div class="section-title service-style--3 text-center mb--20 mb_sm--0 md_md--0">
                                 <h2 class="title">Exceeding expectations</h2>
-                                <p>Focusing on exceeding all expectations in execution, communication, and implementation of various technologies.</p>
+                                <p>Focused on exceeding all expectations in execution, communication, and implementation of various technologies.</p>
                             </div>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
 
 
 
-            <div class="rn-portfolio-area rn-section-gap bg_color--1">
+            <div class="rn-portfolio-area rn-section-gap bg_color--1" id='portfolio'>
                 <div class="portfolio-sacousel-inner pb--30">
                     <div class="container">
                         <div class="row">
@@ -550,7 +550,7 @@
                         <div class="inner">
                             <div class="logo text-center text-sm-left mb_sm--20">
                                 <a href="#">
-                                    <img src="assets/images/logo/logo.png" alt="Logo images" />
+                                    <img src="newest.png" style="width: 80px; height: 80px" alt="Logo images" />
                                 </a>
                             </div>
                         </div>
