--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="header-left d-flex align-items-center">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="newest.png" alt="Creative Agency" className='my-width' width='60' height='60'>
+                            <img src="newest.png" alt="Creative Agency" class='my-width'>
                         </a>
                     </div>
                     <nav class="mainmenunav d-lg-block ml--50">
