--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <div class="about-inner inner pt--100 pt_sm--40 pt_md--40">
                                     <div class="section-title">
                                         <h2 class="title">About Me</h2>
-                                        <p class="description"> Focused on solutions! I like to implement technologies that help businesses grow, retain customers, generate revenue, and make the world a better place. Technology is at the forefront of the societal change/evolution that we are experiencing. Continuing my rapid grow in the industry.
+                                        <p class="description"> Focused on solutions! I like to implement technologies that help businesses growth, retain customers, generate revenue, and make the world a better place. Technology is at the forefront of the societal change/evolution that we are experiencing. Continuing my rapid grow in the industry.
                                            
                                         </p>
                                     </div>
@@ -172,7 +172,7 @@
                                                                     Professionally Experienced</span></a> 2017
                                                             -
                                                             2018</li> -->
-                                                        <li><a href="https://drive.google.com/file/d/1Hteq6aP2b6G2GI-8yukbmW7XRvY-RTZV/view?usp=sharing">View my resume for more details</a>
+                                                        <li><a href="https://drive.google.com/file/d/1Hteq6aP2b6G2GI-8yukbmW7XRvY-RTZV/view?usp=sharing">*View my resume for more details</a>
                                                             </li>
                                                     </ul>
                                                 </div>
