--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -263,7 +263,7 @@
                                 <span>Ready To Do This</span>
                                 <h2>Let's get <br /> to work</h2>
                                     <a class="rn-button-style--2" href="contact.html">
-                                        <span>Contact Us</span>
+                                        <span>Contact Me</span>
                                     </a>
                             </div>
                         </div>
