--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
@@ -408,8 +408,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
