--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
@@ -444,8 +444,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
@@ -462,8 +462,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
@@ -480,8 +480,8 @@
                             </div>
                             <div class="content">
                                 <div class="inner">
-                                    <p>Development</p>
-                                    <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4>
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
                                         <a class="rn-btn" href="portfolio-details.html">Case Study</a>
                                     </div>
