--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
@@ -411,7 +411,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
@@ -429,7 +429,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
@@ -447,7 +447,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
@@ -465,7 +465,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
@@ -483,7 +483,7 @@
                                     <!-- <p>Development</p> -->
                                     <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
                                     <div class="portfolio-button">
-                                        <a class="rn-btn" href="portfolio-details.html">Case Study</a>
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
                                     </div>
                                 </div>
                             </div>
