optimizing portfolio images

--- a/index.html
+++ b/index.html
@@ -490,6 +490,42 @@
                         </div>
                         <!-- End Single Portfolio  -->
 
+                        <!-- Start Single Portfolio  -->
+                        <div class="portfolio">
+                            <div class="thumbnail-inner">
+                                <div class="thumbnail image-3"></div>
+                                <div class="bg-blr-image image-3"></div>
+                            </div>
+                            <div class="content">
+                                <div class="inner">
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
+                                    <div class="portfolio-button">
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Single Portfolio  -->
+
+                        <!-- Start Single Portfolio  -->
+                        <div class="portfolio">
+                            <div class="thumbnail-inner">
+                                <div class="thumbnail image-4"></div>
+                                <div class="bg-blr-image image-4"></div>
+                            </div>
+                            <div class="content">
+                                <div class="inner">
+                                    <!-- <p>Development</p> -->
+                                    <!-- <h4><a href="portfolio-details.html">Getting tickets to the big show</a></h4> -->
+                                    <div class="portfolio-button">
+                                        <a class="rn-btn" href="portfolio-details.html">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Single Portfolio  -->
+
 
                     </div>
                     <!-- End Portfolio Activation  -->
