--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
                                                         
                                                         <li><a href="service.html">Web Development & Design
                                                                <span> -
-                                                                Dev/UI/UX </span></a>Websites, web apps, web experiences, mobile responsive
+                                                                Dev/UI/UX </span></a>Websites, web apps, mobile, testing, & more
                                                             ...</li>
 
                                                                 <li><a href="service.html">Front End Development<span> -
-                                                                   Development</span></a>See array of technologies next tab</li>
+                                                                   Development</span></a>See array of technologies in next tab</li>
 
 
                                                         <li><a href="service.html">Consultations<span> -
-                                                                    Technology & Business</span></a>Small to Large Companies</li>
+                                                                    Technology & Business</span></a>Small to Large Corporations</li>
                                                     </ul>
                                                 </div>
                                             </div>
